--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prestart": "npm install",
-    "start": "node index.js"
+    "start": "node server.js" // "start": "node index.js"
   },
   "keywords": [
     "swagger"
@@ -16,7 +16,8 @@
     "connect": "^3.2.0",
     "js-yaml": "^3.3.0",
     "mongodb": "^3.1.8",
-    "swagger-tools": "0.10.1"
+    "swagger-tools": "0.10.1",
+    "express": "^4.13.4"
   },
   "engine": {
     "node": "*",
